finished basic function for autorunning

--- a/ui/editingdevicedialog.ui
+++ b/ui/editingdevicedialog.ui
@@ -110,6 +110,24 @@
              </item>
             </layout>
            </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_5">
+             <item>
+              <widget class="QPushButton" name="okUserChangedPushButton">
+               <property name="text">
+                <string>ok</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="cancelUserChangedPushButton">
+               <property name="text">
+                <string>cancel</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
           </layout>
          </widget>
         </item>
