fix graphic showing when get device name

--- a/rcc/touchscreenresource.qrc
+++ b/rcc/touchscreenresource.qrc
@@ -2,5 +2,6 @@
   <qresource prefix="images">
     <file>images/dirpic.jpg</file>
     <file>images/opendirpic.jpg</file>
+    <file>images/database.jpg</file>
   </qresource>
 </RCC>
