add login widget

--- a/rcc/touchscreenresource.qrc
+++ b/rcc/touchscreenresource.qrc
@@ -3,5 +3,8 @@
     <file>images/dirpic.jpg</file>
     <file>images/opendirpic.jpg</file>
     <file>images/database.jpg</file>
+    <file>images/inverter.png</file>
+    <file>images/steeve.jpg</file>
+    <file>images/loginpic.jpg</file>
   </qresource>
 </RCC>
