fix tcpserver to response infoScreen

--- a/touchscreenserver.qss
+++ b/touchscreenserver.qss
@@ -1,10 +1,10 @@
 
 
 QPushButton { /* kjk */
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     font-family: "Snell Roundhand";
-    color: red;
+    color: blue;
 
     border-width: 5px;
     /* border-color: gray; */
