--- a/ui/systemmanagementwidget.ui
+++ b/ui/systemmanagementwidget.ui
@@ -87,6 +87,26 @@
           <item row="0" column="1">
            <widget class="QLineEdit" name="timeLineEdit"/>
           </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>PlcIp</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="plcIpLineEdit"/>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>PlcPort</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="plcPortLineEdit"/>
+          </item>
          </layout>
         </widget>
        </item>
