--- a/touchscreenserver.qss
+++ b/touchscreenserver.qss
@@ -26,10 +26,14 @@ QLabel#devPicLabel {
 LoginWidget {
     border-image:url(:/images/images/login-background.png);
 }
-/*
+
 QWidget#loginWidget{
-    background-color: transparent;
-}*/
+    background-color: rgba(255, 255, 255, 5%);
+}
+
+QLabel#loginLabel{
+    color:white
+}
 QLabel#accountLabel{
     border-image:url(:/images/images/login-account.png);
     border-top-left-radius: 8px;
