--- a/ui/loginwidget.ui
+++ b/ui/loginwidget.ui
@@ -80,12 +80,12 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>0</width>
+          <width>40</width>
           <height>40</height>
          </size>
         </property>
         <property name="text">
-         <string>       </string>
+         <string/>
         </property>
        </widget>
       </item>
@@ -165,12 +165,12 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>0</width>
+          <width>40</width>
           <height>40</height>
          </size>
         </property>
         <property name="text">
-         <string>       </string>
+         <string/>
         </property>
        </widget>
       </item>
@@ -262,7 +262,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="loginLabel">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
