--- a/touchscreenserver.qss
+++ b/touchscreenserver.qss
@@ -10,9 +10,9 @@ MainWindow {
     background-color: #0b0f1a
 }
 QTableWidget {
-    foreground-color: white;
+    /* foreground-color: white; */
     background: #131723;
-    alternate-background: #3A3A3C;
+    alternate-background-color: #3A3A3C;
 }
 QHeaderView::section{
     background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(80, 80, 80, 255), stop:1 rgba(30, 30, 30, 255));
