add some picture and change modalTextLabel

--- a/rcc/touchscreenresource.qrc
+++ b/rcc/touchscreenresource.qrc
@@ -9,7 +9,7 @@
     <file>images/login-account.png</file>
     <file>images/login-password.png</file>
     <file>images/login-pushbutton-background.png</file>
-    <file>images/title.png</file>
+    <file>images/title.jpg</file>
     <file>images/settingbuttonup.png</file>
     <file>images/settingbuttondown.png</file>
     <file>images/switchwidgetup.png</file>
